--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,11 @@
       <version>5.3.2</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-media</artifactId>
+      <version>12.0.2</version>
+    </dependency>
   </dependencies>
 
   <build>
